--- a/HiChongSwift/AboutMe.storyboard
+++ b/HiChongSwift/AboutMe.storyboard
@@ -75,16 +75,16 @@
                                                         <constraint firstAttribute="height" constant="17" id="Toc-1P-0Ee"/>
                                                     </constraints>
                                                 </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="AboutMeTop1" translatesAutoresizingMaskIntoConstraints="NO" id="qRr-wj-W7r">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AboutMeTop1" translatesAutoresizingMaskIntoConstraints="NO" id="qRr-wj-W7r">
                                                     <rect key="frame" x="8" y="41" width="20" height="20"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="喜欢" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lCy-lX-fZC">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="喜欢" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lCy-lX-fZC">
                                                     <rect key="frame" x="36" y="41" width="34" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceq-WJ-ext">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceq-WJ-ext">
                                                     <rect key="frame" x="78" y="41" width="10" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -202,6 +202,9 @@
                                     <outlet property="bottomLeft" destination="uIk-uN-K59" id="bFj-p8-a2V"/>
                                     <outlet property="bottomMiddle" destination="brg-aw-IMe" id="nMd-W5-e7M"/>
                                     <outlet property="bottomRight" destination="2AM-k7-krL" id="3X1-ge-tCW"/>
+                                    <outlet property="careLabel" destination="uqZ-wS-yWX" id="dLy-mv-ZXb"/>
+                                    <outlet property="fansLabel" destination="S7r-2R-uZh" id="O1A-ev-jqF"/>
+                                    <outlet property="likeLabel" destination="ceq-WJ-ext" id="Ukp-6X-v3z"/>
                                     <outletCollection property="bottomLineHeightConstraints" destination="Toc-1P-0Ee" collectionClass="NSMutableArray" id="XFJ-Xp-L4f"/>
                                     <outletCollection property="bottomLineHeightConstraints" destination="d6j-lD-4Qw" collectionClass="NSMutableArray" id="bN7-fr-BVj"/>
                                     <outletCollection property="bottomLineHeightConstraints" destination="ba0-39-hz5" collectionClass="NSMutableArray" id="RXT-fG-7hg"/>
@@ -602,25 +605,25 @@
                                                             <outletCollection property="gestureRecognizers" destination="xgZ-rU-z7c" appends="YES" id="Qr7-Q6-Gqi"/>
                                                         </connections>
                                                     </imageView>
-                                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NH2-Gq-Qoh">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NH2-Gq-Qoh">
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" id="XmT-Yg-rpL"/>
                                                         </constraints>
                                                     </view>
-                                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IMk-Yf-hyk">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IMk-Yf-hyk">
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" id="bYz-DE-Urb"/>
                                                         </constraints>
                                                     </view>
-                                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IQJ-U4-1cA">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQJ-U4-1cA">
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" id="aoB-WT-s80"/>
                                                         </constraints>
                                                     </view>
-                                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aRg-2i-Iab">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aRg-2i-Iab">
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" id="81m-Ik-Lae"/>
@@ -1304,6 +1307,6 @@
         <image name="sqMale" width="15" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="7Mw-dF-Oq3"/>
+        <segue reference="FEF-1z-blp"/>
     </inferredMetricsTieBreakers>
 </document>
