--- a/HiChongSwift/AboutMe.storyboard
+++ b/HiChongSwift/AboutMe.storyboard
@@ -1307,6 +1307,6 @@
         <image name="sqMale" width="15" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="FEF-1z-blp"/>
+        <segue reference="7Mw-dF-Oq3"/>
     </inferredMetricsTieBreakers>
 </document>
